--- a/Tuple/Tupletest.ipynb
+++ b/Tuple/Tupletest.ipynb
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 'Hello', ['apple', 'wood apple', 'dragon fruit'], 5)\n"
+     ]
+    }
+   ],
    "source": [
     "#change item in tuple\n",
     "my_tuple = (3, \"Hello\", True, 5)\n",
@@ -62,7 +70,8 @@
     "\n",
     "#convert list to tuple\n",
     "my_tuple = tuple(tuple_list)\n",
-    "\n"
+    "\n",
+    "print(my_tuple)"
    ]
   },
   {
